   * fixed the description of traits in the help & tutorial
   * fixed user-campaigns not being translatable anymore
   * fixed some untranslatable strings
   * new translations:
     * Turkish
   * updated translations: 
     * Afrikaans
     * British English
     * Catalan
     * Chinese
     * French
     * German
     * Hungarian
     * Italian
     * Japanese
     * Slovenian
     * Swedish
 * fixed the missing 'elder-mage-halo7.png' in the Elder Mage
 * fixed some OoS errors when chatting while a fight is taking place
 * fixed the spurious "statistics verification failed" messages
 * fixed bug #12611: modifying villages with [terrain] interacting badly with capturing them.
 * fixed bug #12698: segfault with --decompress on relative path
 * various bug fixes and code cleanups

Version 0.9.0:
 * user interface improvements:
   * added alternative theme: DFool
   * added theme dialog, launched with ":theme"	
   * made help use single click instead of double click
 * campaign modifications
   * tutorial polishing
   * updated 'The Siege of Elensefar', 'Mountain Pass', 'The Swamp of Esten', and 'A Final Spring' to use the new ford terrain (Heir to the Throne & The Rise of Wesnoth).
   * modified the behaviour of the thieves in 'The Siege of Elensefar' (Heir to the Throne)
   * updated Heir to the Throne and The Rise of Wesnoth to use the ruined keeps where appropriate
   * dialog improvements in Eastern Invasion
   * new map for Drowned Plains (Eastern Invasion)
   * changed the Wesfolk Leader's guards to poachers in 'The Fall' (The Rise of Wesnoth)
 * multiplayer improvements
   * rewrote multiplayer lobby code
   * changed Broken_Bridge to use new ruined castles
   * added new multiplayer maps: Icy Waters, Clash
   * changed King_of_the_Hill to use a Dwarvish Castle
   * chat messages are now displayed in the user's colour when prefixed with /me
   * split the map and scenario file for 'An Island'
   * disabled debug mode for multiplayer games